--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,4 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Reference-style: 
+!["404 Not Found"][logo]
+
+[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
