--- a/_pages/404.md
+++ b/_pages/404.md
@@ -8,4 +8,4 @@ permalink: /404.html
 Reference-style: 
 !["404 Not Found"][logo]
 
-[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
+[logo]: "/assets/images/404.jpg" "404 Not Found"
