--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,5 @@ sitemap: false
 permalink: /404.html
 ---
 
-Reference-style: 
-!["404 Not Found"][logo]
-
-[logo]: "../assets/images/404.jpg" "404 Not Found"
+<img src="assets/images/404.jpg"style="margin: 0 auto; display:block; text-align: center" alt="404">
+<br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a>
