--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,5 +5,5 @@ sitemap: false
 permalink: /404.html
 ---
 
-![alt text](https://github.com/dewandemo/dewandemo.github.io/blob/master/assets/images/404.jpg "404")
+![404 Not Found](https://github.com/dewandemo/dewandemo.github.io/blob/master/assets/images/404.jpg "404")
 <br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a>
