--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,5 +5,5 @@ sitemap: false
 permalink: /404.html
 ---
 
-<img src="{{ site.baseurl }}/assets/images/404.jpg">
-<br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a>
+# Ahhhhhhh! This page does not exist
+You can either click --> <br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a> OR stay on this page to think about the meaning of life. 
