--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,4 +6,5 @@ permalink: /404.html
 ---
 
 # Ahhhhhhh! This page does not exist
-<br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a> OR I'd like stay on this page to think about the meaning of life. 
+You can either click -->
+<br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a> OR stay on this page to think about the meaning of life. 
