--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,10 +1,9 @@
 ---
-title: "Page Not Found"
+title: "Ahhhhhhh! This page does not exist"
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
 
-# Ahhhhhhh! This page does not exist
 You can either click -->
 <br><a href="/" style="margin: 0 auto; display:block; text-align: center">Take me home!</a> OR stay on this page to think about the meaning of life. 
