Syncing with original

--- a/_posts/2020-08-19-iac-pt1.md
+++ b/_posts/2020-08-19-iac-pt1.md
@@ -1,5 +1,7 @@
 ---
 title: "Stability comes from making changes - A tale of infrastructure as code"
+last_modified_at: 2020-08-19T0:00:00-05:00
+author: Dewan Ahmed
 categories:
   - Blog
 tags:
