--- a/_posts/2020-08-19-iac-pt1.md
+++ b/_posts/2020-08-19-iac-pt1.md
@@ -5,8 +5,8 @@ author: Dewan Ahmed
 categories:
   - Blog
 tags:
-  - iac
-  - gitops
+  - Infrastructure as Code
+  - GitOps
 ---
 
 When mentioning **code**, it’s commonly understood as application code. What about the system your application runs on? Infrastructure as Code(IaC) applies the same software engineering principles used for application code to the infrastructure. Simply put, it means to codify your IT infrastructure to better manage large-scale, distributed systems and cloud-native platforms. In part one of Infrastructure as Code blog series, I talk about the need for dynamic infrastructure to be able to handle change and point out some of the common objections to Infrastructure as Code.
